@@ -1,3 +1,7 @@
+2017-02-13 Magnus Hagdorn
+ * piccolo2/precord.py: add simple program to record spectra
+ * setup.py: add new program
+
 2016-05-17 Magnus Hagdorn
  * piccolo2/client/PiccoloXbeeClient.py: do not die if hardware module is not
    available
